Tip calculator: fixed spacing in darTheme.css Unit Price: added a dark theme. Made transition style apply only to relevant nodes to prevent janky transitions when switching theme.

--- a/unitpricecomparison/styles_unminified.css
+++ b/unitpricecomparison/styles_unminified.css
@@ -1,6 +1,6 @@
-html * {
+/*html * {
   transition: 0.5s;
-}
+}*/
 
 .transition {
   transition: 0.25s;
@@ -86,8 +86,8 @@ button {
   text-align: center;
 }
 
-input, .itemPricePerUnits, .itemLabel {
-  width: 25%;
+input[type=number], input[type=text], .itemPricePerUnits, .itemLabel {
+  width: 20%;
   margin: 0.3rem;
 }
 
